# webapprust

./: Cargo.toml  README.md
src/: main.rs
static/: index.css
templates/: index.hbs
