[package]
name = "webapprustdemo"
version = "0.1.0"
authors = ["mthh <>"]

[dependencies]
env_logger = "*"
handlebars-iron = "0.27.0"
lazy_static = "1.2.0"
logger = "*"
mime = "*"
mount = "*"
iron = "0.6.0"
params = "*"
router = "0.6.0"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
staticfile = "*"
uuid = { version = "0.4", features = ["v4"] }
